--- a/node/package.json
+++ b/node/package.json
@@ -8,6 +8,7 @@
     "passport": "0.1.17",
     "passport-local": "0.1.6",
     "password-hash": "1.2.1",
-    "mysql": "2.0.0-alpha8"
+    "mysql": "2.0.0-alpha8",
+    "validator": "1.5.0"
   }
 }
