--- a/node/package.json
+++ b/node/package.json
@@ -9,6 +9,7 @@
     "passport-local": "0.1.6",
     "password-hash": "1.2.1",
     "mysql": "2.0.0-alpha8",
-    "validator": "1.5.0"
+    "validator": "1.5.0",
+    "nodemailer": "0.5.2"
   }
 }
