--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
     "password-hash": "1.2.1",
     "mysql": "2.0.0-alpha8",
     "validator": "1.5.0",
-    "nodemailer": "0.5.2"
+    "nodemailer": "0.5.2",
+    "mongo": "~0.1.0"
   }
 }
