--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ dev/.sass-cache/*
 .gitshots
 
 # Exclude compiled css because of merging errors.
-static/css/ie.css
-static/css/print.css
-static/css/screen.css
+static/css/app.css
+
+# Exclude compiled js
+static/js/libraries.js
+static/js/app.js
 
 
 
@@ -40,3 +42,6 @@ dev/node_modules/*
 
 # exclude config file
 node/config.json
+
+# exclude bower
+dev/bower_components
