--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,9 @@
     "mysql": "2.0.0-alpha8",
     "validator": "1.5.0",
     "nodemailer": "0.5.2",
-    "mongo": "~0.1.0"
+    "mongo": "~0.1.0",
+    "passport.socketio": "~3.0.0",
+    "connect-mongo": "~0.4.0",
+    "socket.io": "~0.9.16"
   }
 }
