--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "passport.socketio": "~3.0.0",
     "connect-mongo": "~0.4.0",
     "socket.io": "~0.9.16",
-    "validator": "~3.5.0"
+    "validator": "~3.5.0",
+    "mongodb": "~1.4.7"
   }
 }
