--- a/node/package.json
+++ b/node/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "express": "3.3.5",
-    "passport": "0.1.17",
-    "passport-local": "0.1.6",
     "password-hash": "1.2.1",
     "mysql": "2.0.0-alpha8",
     "nodemailer": "0.5.2",
@@ -15,6 +13,8 @@
     "connect-mongo": "~0.4.0",
     "socket.io": "~0.9.16",
     "validator": "~3.5.0",
-    "mongodb": "~1.4.7"
+    "mongodb": "~1.4.7",
+    "passport": "~0.2.0",
+    "passport-local": "~1.0.0"
   }
 }
