--- a/node/package.json
+++ b/node/package.json
@@ -15,6 +15,9 @@
     "validator": "~3.5.0",
     "mongodb": "~1.4.7",
     "passport": "~0.2.0",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "cron": "~1.0.5",
+    "email-templates": "~1.1.2",
+    "ejs": "~1.0.0"
   }
 }
